--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,5 +31,44 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="20sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/startButton"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:text="@string/start_spinner"
+            android:background="@color/purple_700"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            style="?android:attr/buttonBarButtonStyle"
+            android:textSize="20sp"/>
+
+        <Button
+            android:id="@+id/stopButton"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:text="@string/stop_spinner"
+            android:background="@color/purple_700"
+            android:layout_margin="20dp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            style="?android:attr/buttonBarButtonStyle"
+            android:textSize="20sp"/>
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:visibility="gone"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
